commit 33 (order placement)

--- a/Dairy_Care_System/dairy/static/css/updateuserprofile.css
+++ b/Dairy_Care_System/dairy/static/css/updateuserprofile.css
@@ -58,7 +58,7 @@ input[type="text"], input[type="email"] {
     top: 20px;
     left: 20px;
     font-size: 30px;
-    color: black;
+    color: white;
     text-decoration: none;
     font-family: 'Comic Sans MS', cursive;
 }
