--- a/Dairy_Care_System/templates/userprofile.html
+++ b/Dairy_Care_System/templates/userprofile.html
@@ -8,7 +8,7 @@
     <style>
         /* Basic styles */
         body {
-            background: url('{% static "images/userprofile.jpeg" %}') no-repeat center center fixed;
+            background: url('{% static "images/userprofile.jpg" %}') no-repeat center center fixed;
             background-size: cover;
             font-family: 'Arial', sans-serif;
             margin: 0;
