commit 34 (Animal Details)

--- a/Dairy_Care_System/templates/animaldetails.html
+++ b/Dairy_Care_System/templates/animaldetails.html
@@ -225,7 +225,7 @@
             <p><strong>Added at:</strong> {{ animal.created_at }}</p>
             <p><strong>Updated at:</strong> {{ animal.updated_at }}</p>
             <div class="button-group">
-                    <a href="#" class="health-link">
+                    <a href="animalhealthstatus" class="health-link">
                         <i class="fas fa-heartbeat"></i> Health Status
                     </a>
                     <a href="#" class="edit-link">
