--- a/Dairy_Care_System/templates/adminpage.html
+++ b/Dairy_Care_System/templates/adminpage.html
@@ -24,11 +24,12 @@
     <div id="mySidenav" class="sidenav">
         <a href="#">Dairy Care System</a><br><br>
         <a href="{% url 'reguserlist' 'all' %}"><i class="fas fa-users"></i>  Users List</a><br>
-        <a href="{% url 'productslist' %}"><i class="fas fa-tags"></i>  Products List</a><br>
+        <a href="{% url 'productslist' %}"><i class="fas fa-shopping-basket"></i>  Products List</a><br>
         <a href="{% url 'productstock' %}"><i class="fas fa-boxes"></i> Stock List</a><br>
         <a href="{% url 'animalslist' %}"><i class="fas fa-paw"></i>  Animals List</a><br>
         <a href="#"><i class="fas fa-glass-whiskey"></i>  Milk Details</a><br>
         <a href="#"><i class="fas fa-tools"></i>  Equipment Details</a><br>
+        <a href="stocknotification"><i class="fas fa-bell"></i>  Notifications</a><br>
         <a href="{% url 'feedbackreview' %}"><i class="fas fa-comments"></i>  Feedback Review</a><br>
     </div>
 
