--- a/Dairy_Care_System/templates/customerpage.html
+++ b/Dairy_Care_System/templates/customerpage.html
@@ -27,11 +27,11 @@
     <!-- Side Navigation (Always Visible) -->
     <div id="mySidenav" class="sidenav">
         <a href="#"></i> Dairy Care System</a><br><br><br>
-        <a href="{% url 'custproductslist' %}"><i class="fas fa-tags"></i> Products List</a><br>
+        <a href="{% url 'custproductslist' %}"><i class="fas fa-shopping-basket"></i> Products List</a><br>
         <a href="{% url 'wishlist' %}"><i class="fas fa-heart"></i> Your Wishlist</a><br>
         <a href="{% url 'viewcart' %}"><i class="fas fa-shopping-cart"></i> Your Cart</a><br>
         <a href="{% url 'orderhistory' %}"><i class="fas fa-shopping-bag"></i> Your Orders</a><br>
-        <a href="{% url 'feedbackpage' %}"><i class="fas fa-comment"></i> Your Feedback</a><br>
+        <a href="{% url 'feedbackpage' %}"><i class="fas fa-comments"></i> Your Feedback</a><br>
     </div>
 
     <!-- Navigation Bar -->
