--- a/Dairy_Care_System/templates/employeepage.html
+++ b/Dairy_Care_System/templates/employeepage.html
@@ -22,10 +22,11 @@
     <!-- Side Navigation -->
     <div id="mySidenav" class="sidenav">
         <a href="#">Dairy Care System</a><br><br><br>
-        <a href="{% url 'productslist' %}"><i class="fas fa-tags"></i> Products List</a><br>
+        <a href="{% url 'productslist' %}"><i class="fas fa-shopping-basket"></i> Products List</a><br>
         <a href="{% url 'animalslist' %}"><i class="fa fa-paw"></i> Animals List</a><br>
         <a href="#"><i class="fas fa-glass-whiskey"></i> Milk Details</a><br>
-        <a href="#"><i class="fa fa-tools"></i> Equipment Details</a>
+        <a href="#"><i class="fa fa-tools"></i> Equipment Details</a><br>
+        <a href="stocknotification"><i class="fas fa-bell"></i>  Notifications</a><br>
     </div>
 
 <!-- Navigation Bar -->
