--- a/Dairy_Care_System/templates/editproduct.html
+++ b/Dairy_Care_System/templates/editproduct.html
@@ -30,6 +30,9 @@
             <li><b><a href="{% url 'editproduct' %}"><i class="fas fa-tags"></i> All Products List</a></b></li>
         </div>
         <div class="nav-item">
+            <li><b><a href="{% url 'productstock' %}"><i class="fas fa-boxes"></i> Stock List</a></b></li>
+        </div>
+        <div class="nav-item">
             <li>
                 <b><a href="#" class="username" onclick="toggleDropdown()"><i class="fas fa-user-circle"></i> {{ username }}</a></b>
                 <div class="dropdown-content" id="dropdown-content">
