--- a/Dairy_Care_System/dairy/static/css/changepassword.css
+++ b/Dairy_Care_System/dairy/static/css/changepassword.css
@@ -58,7 +58,7 @@ button[type="submit"]:hover {
     top: 20px;
     left: 20px;
     font-size: 30px;
-    color: black;
+    color: rgb(255, 255, 255);
     text-decoration: none;
     font-family: 'Comic Sans MS', cursive;
 }
