--- a/Dairy_Care_System/templates/employeepage.html
+++ b/Dairy_Care_System/templates/employeepage.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
 </head>
+
 <body>
     
     <!-- Side Navigation -->
@@ -55,7 +56,7 @@
     </div><br><br>
     <div class="quotes">
         The strength of the team is each individual member. The strength of each member is the team.
-    </div><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <footer>
         <p>&copy; 2024 Dairy Care System. All rights reserved.</p>
