--- a/Dairy_Care_System/templates/productslist.html
+++ b/Dairy_Care_System/templates/productslist.html
@@ -344,12 +344,15 @@
     <div class="header">
         <!-- Hamburger Icon -->
         <!-- <span class="hamburger" onclick="openNav()">&#9776;</span> -->
-
+         
         <div class="nav-item">
             <li><b><a href="{% url 'addproducts' %}"><i class="fa fa-cart-plus"></i> Add Products</a></b></li>
         </div>
         <div class="nav-item">
             <li><b><a href="{% url 'editproduct' %}"><i class="fas fa-shopping-basket"></i> All Products List</a></b></li>
+        </div>
+        <div class="nav-item">
+            <li><b><a href="{% url 'productstock' %}"><i class="fas fa-boxes"></i> Stock List</a></b></li>
         </div>
         <div class="nav-item">
             <li>
